# investments-review-agent

./: .gitignore  Makefile  README.md  config.json  index.html  pyproject.toml  script.js
.github/workflows/: deploy.yaml  lint.yaml
data/: portfolio.xlsx
src/investments_review/: api.py  exceptions.py  shared.py
src/investments_review/presentations/: main.py  models.py  workflow.py
src/investments_review/sheets/: llm.py  main.py  models.py  prompt.py  retry.py  workflow.py
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.css  App.tsx
ui/src/components/: base.tsx  runWorkflow.tsx
ui/src/lib/: clients.ts
